# demo

./: .cspell.json  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.in  requirements.txt  tox.ini
.binder/: postBuild
.github/workflows/: cd.yml  ci.yml  constraints.yml  notebook.yml  pr-linting.yml
2021.11.29/: ampform.ipynb  pyproject.toml  qrules.ipynb  tensorwaves-0.3.4.ipynb  tensorwaves.ipynb
2021.12.13/: ampform.ipynb  pyproject.toml  qrules.ipynb  tensorwaves-caching.ipynb  tensorwaves-core-ideas.ipynb  tensorwaves-optimized-expression.ipynb  tensorwaves.ipynb
2022.03.29/: ampform.ipynb  sympy.ipynb
binder/: requirements.in  requirements.txt
