[project]
dependencies = [
    "ipywidgets",
]
name = "compwa-demo"
requires-python = "~=3.13.0"
version = "0.0.0"

[dependency-groups]
dev = [
    "ruff",
    {include-group = "jupyter"},
    {include-group = "notebooks"},
]
jupyter = [
    "jupyter-ruff",
    "jupyterlab",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-quickopen",
    "python-lsp-ruff",
    "python-lsp-server",
    {include-group = "notebooks"},
]
notebooks = ["pyproject-local-kernel"]

[tool.poe.executor]
isolated = true
no-group = "dev"
type = "uv"

[tool.poe.tasks.all]
help = "Run all continuous integration (CI) tasks locally"
ignore_fail = "return_non_zero"
sequence = ["style", "nb"]

[tool.poe.tasks.lab]
args = [{name = "paths", default = "", positional = true}]
cmd = "jupyter lab ${paths}"
executor = {group = "jupyter"}
help = "Launch Jupyter Lab"

[tool.poe.tasks.nb]
args = [{name = "paths", default = "", multiple = true, positional = true}]
cmd = "pytest --nbmake --nbmake-timeout=0 ${paths}"
executor = {group = "notebooks", with = "nbmake"}
help = "Run all notebooks"

[tool.poe.tasks.style]
cmd = "pre-commit run --all-files"
help = "Perform all linting, formatting, and spelling checks"

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--nbmake",
]
filterwarnings = [
    "ignore:Passing a schema to Validator.iter_errors is deprecated.*:DeprecationWarning",
]

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN401",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "PLW1514",
    "PT001",
    "PTH",
    "RUF067",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "ANN",
    "B015",
    "B018",
    "C90",
    "D",
    "E303",
    "E402",
    "E703",
    "N806",
    "N816",
    "PLR09",
    "PLR2004",
    "PLW0602",
    "PLW0603",
    "S101",
    "T20",
    "TC00",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = ["project"]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
